# og_production_analyzer

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
og_production_analyzer/: __init__.py  production_analyzer.py
og_production_analyzer/report_generator/: style.py
production_analyzer/: __init__.py  _constants.py  data_loader.py  production_analyzer.py
production_analyzer/config/: __init__.py  config_loader.py
production_analyzer/config/state_configs/: co_config.json  mt_config.json  nd_config.json  wy_config.json
production_analyzer/report_generator/: __init__.py  report_generator.py  report_sections.py  style.py
sample/: cogcc_analyzer.py  sample_readme.md
sample/sample analysis results/: production analysis.txt
sample/sample analysis results/production records/: 05-001-07727_production_data.csv  05-001-07727_production_data_raw.html  05-001-07729_production_data_raw.html  05-001-08288_production_data.csv  05-001-08288_production_data_raw.html  05-123-08053_production_data.csv  05-123-08053_production_data_raw.html  05-123-09456_production_data.csv  05-123-09456_production_data_raw.html  combined_data.csv
