[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.2.3"
dependencies = [
    "pandas",
    "matplotlib",
    "requests",
    "lxml",
]
name = "production_analyzer"
description = "A tool for examining monthly oil and/or gas records for gaps in production."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://github.com/JamesPImes/og_production_analyzer"
Repository = "https://github.com/JamesPImes/og_production_analyzer.git"
